Make Agenda a Maven project.